[package]
name = "raspi-work"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
device_query = "2.1.0"
eframe = "0.29.0"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
rppal = { version="0.19.0", features=["hal"] }
serde = "1.0.210"
serde_json = "1.0.128"
ssd1306 = "0.9.0"
